# smf-bench

./: .gitignore  CHANGELOG.md  EVAL_DOCTRINE.md  README.md  e2e_test.py  pyproject.toml  run_benchmark.py  run_direct.py  run_errored.py  run_multi.py  run_quick.py  run_remaining.py  run_stage1.py  smoke_test.py  test_client.py
models/: gemma-4-26b-a4b-nvfp4.yaml  nemotron-omni.yaml  qwen3.6-27b.yaml  qwen3.6-35b-a3b-nvfp4.yaml
results/: stage1_comparison_all_models.json  stage1_gemma-4-26b_20260706_223509.json  stage1_gemma-4-26b_20260706_233129.json  stage1_gpt-oss-120b-mxfp4-v5_20260707_212854.json  stage1_gpt-oss-120b-mxfp4_20260707_162303.json  stage1_gpt-oss-120b-mxfp4_20260707_162449.json  stage1_gpt-oss-120b-mxfp4_20260707_163937.json  stage1_gpt-oss-120b-mxfp4_20260707_183306.json  stage1_nemotron-3-nano-30b_20260706_165217.json  stage1_nemotron-3-nano-30b_20260706_202418.json  stage1_nemotron-3-nano-30b_20260706_202714.json  stage1_nemotron-3-nano-30b_resume_20260706_191208.json  stage1_nemotron-3-nano-30b_resume_20260706_191551.json  stage1_nemotron-3-super-120b_20260707_012517.json  stage1_nemotron-3-super-120b_20260707_101522.json  stage1_qwen3.6-35b_20260706_203525.json  stage1_qwen3.6-35b_20260706_203823.json  stage1_qwen3.6-35b_20260706_214012.json  stage1_qwen3.6-35b_20260706_220747.json
smf_bench/: __init__.py  api_client.py  cli.py  model_registry.py  perf_grid.py  reporting.py  results_store.py  runner.py  test_registry.py
smf_bench/adapters/: __init__.py
smf_bench/evaluators/: __init__.py
suites/multimodal/audio/: audio.yaml
(+15 files in other folders)
