[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy"

[project]
name = "smf-bench"
version = "0.1.0"
description = "SMF Works unified benchmark framework for LLM and multimodal model evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SMF Works"}]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
media = ["scipy>=1.12", "soundfile>=0.12", "av>=12.0"]
vision = ["transformers>=4.40", "torch>=2.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
smf-bench = "smf_bench.cli:main"

[tool.setuptools.packages.find]
include = ["smf_bench*"]